@startuml
skinparam classAttributeIconSize 0
class User {
  +id: UUID
  +email: string
  +status: ACTIVE|INACTIVE
  +email_verified_at: datetime?
  +session_version: int
}
class AuthSession {
  +id: UUID
  +user_id: UUID
  +refresh_token_hash: string
  +last_seen_at: datetime
  +revoked_at: datetime?
}
class EmailVerificationToken {
  +user_id: UUID
  +token_hash: string
  +expires_at: datetime
}
class PasswordResetToken {
  +user_id: UUID
  +token_hash: string
  +expires_at: datetime
}
User "1" -- "*" AuthSession
User "1" -- "*" EmailVerificationToken
User "1" -- "*" PasswordResetToken
@enduml
